tests/Tests.Unit.Application/Errors/ValidationFailureTests/Ctor.cs
namespace Tests.Unit.Application.Errors.ValidationFailureTests;

public class Ctor
{
    [Fact(Skip = "Not implemented")]
    public void Ctor_Instantiated_ArgsAreMappedCorrectly()
    {
        // arrange

        // assert

        // act
        Assert.True(true);
    }
}